# rapidfire

./: LICENSE  README.md  components.json  flake.nix  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tailwind.config.js  tailwind.config.ts  vite.config.ts
.github/workflows/: cache-clean-by-branch.yaml  cache-clean.yaml  cache-store.yaml  nightly-build.yaml  publish.yaml
rapidfire/: package.json
rapidfire/src-tauri/: .gitignore  build.rs  tauri.conf.json
rapidfire/src-tauri/src/: version.rs  volume.rs
rapidfire/src/components/: footer.tsx  header.tsx  nowplay.tsx
rapidfire/src/lib/: colortype.tsx  isTauri.ts  mocks.ts  type.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  msgbox.rs  volume.rs  wmmin.rs
src-tauri/src/functions/: mod.rs  volume_change.rs
src-tauri/src/util/: event.rs
src/components/: card.tsx  footer.tsx  header.tsx  nowplay.tsx  sidebar.tsx
src/components/ui/: slider.tsx
src/lib/: colortype.tsx  isTauri.ts  mocks.ts  type.ts  useAnimationFrame.ts  useListen.ts  useListenState.ts  usePerformanceCounter.ts
