[package]
name = "rapidfire"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open", "dialog"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.128"
rodio = { git = "https://github.com/PetrGlad/rodio", branch = "configurable-buffer-size" }
tokio = { version = "1.40.0", features = ["full"] }
jsonc-to-json = "0.1.1"
ulid = "1.1.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["endpointvolume", "mmdeviceapi", "combaseapi", "winnt", "winuser", "audiosessiontypes"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
